Corrigindo o PHP e Ajax

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     <h3 class="h3">
                         Quer saber mais?<small> Entre em contato.</small>
                     </h1>
-                    <form class="w-100">
+                    <form class="w-100" id="formulario">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
