Corrigindo o PHP e Ajax parte 2

--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
                     <h3 class="h3">
                         Quer saber mais?<small> Entre em contato.</small>
                     </h1>
-                    <form class="w-100" id="formulario" action="salvar.php" method="post" name="formulario" enctype="multipart/form-data">
+                    <form class="w-100" id="formulario" name="formulario" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="name">Nome</label>
-                                <input type="text" class="form-control" id="name" placeholder="Digite seu nome" value="" required="required" />
+                                <input type="text" class="form-control" id="name" placeholder="Digite seu nome" required="required" />
                             </div>
                             <div class="form-group">
                                 <label for="email">Endereço de Email</label>
@@ -170,7 +170,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="name">Mensagem</label>
+                                <label for="message">Mensagem</label>
                                 <textarea id="message" class="form-control" rows="8" cols="25" required="required"
                                 placeholder="Escreva sua mensagem aqui."></textarea>
                             </div>
