remoção de dados confidenciais

--- a/index.html
+++ b/index.html
@@ -25,24 +25,24 @@
                     </a>
                 </div>
                 <div class="align-content-center pt-3">
-                    <p class="titulo">Prof. Rogério</p>
+                    <p class="titulo">Prof. Fernando</p>
                     <p class="sub">Personal Trainer</p>
                 </div>
             </div>
             <div>
                 <ul class="social-list d-none d-sm-flex">
                     <li>
-                        <a href="tel:+051998726287"><i class="fas fa-phone"></i></a>
+                        <a href="tel:+051993261772"><i class="fas fa-phone"></i></a>
 
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/rogerio.doamaralborba"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/usuario.nãoidentificado"><i class="fab fa-facebook-f"></i></a>
                     </li>
                     <li>
-                        <a href="https://api.whatsapp.com/send?phone=5551998726287&text=Ol%C3%A1%20Rog%C3%A9rio.%20Quero%20contratar%20voc%C3%AA%20como%20Personal%20Trainer.%20"<i class="fab fa-whatsapp"></i></a>
+                        <a href="https://api.whatsapp.com/send?phone=5551993261772&text=Ol%C3%A1%20Fernando.%20Quero%20contratar%20voc%C3%AA%20como%20Personal%20Trainer.%20"<i class="fab fa-whatsapp"></i></a>
                     </li>
                     <li>
-                        <a href="mailto:rogerioamaralborba@gmail.com"><i class="fas fa-at"></i></a>                                
+                        <a href="mailto:suporteiros@gmail.com"><i class="fas fa-at"></i></a>                                
                     </li>
                 </ul>
             </div>   
@@ -59,7 +59,7 @@
         </ol>
         <div class="carousel-inner ">
           <div class="carousel-item active container-carrossel">
-            <img class="first-slide" src="img/rogerio_flexao.jpg" alt="Professor treinando">
+            <img class="first-slide" src="img/fernando_flexao.jpg" alt="Professor treinando">
             <div class="container"> 
                <div class="carousel-caption text-left">
                 <h1>Treino em academia.</h1>
@@ -187,17 +187,17 @@
                 </div>
                 <div class="text-center col-lg-4 align-self-start mt-3">
                     <div>
-                        <img src="img/rogerio_pic.jpg" width="200" class="rounded-circle">
+                        <img src="img/fernando_pic.jpg" width="200" class="rounded-circle">
                     </div>
                     <div class="mt-3 d-flex flex-column justify-content-center">
                         <div>
-                            <h5 class="mt-2 mb-1">Rogério do Amaral Borba</h5> <span>Personal Trainer</span>
+                            <h5 class="mt-2 mb-1">Fernando Torres</h5> <span>Personal Trainer</span>
                         </div>
                         <div class="mt-1 mx-auto">
                             <ul class="list-unstyled text-left"> 
-                                <li class="fonts"><a href="mailto:rogerioamaralborba@gmail.com" class="text-dark text-decoration-none"><i class="fas fa-envelope mr-3"></i>rogerioamaralborba@gmail.com</a></li>
-                                <li class="fonts"><a href="tel:+051998726287" class="text-dark text-decoration-none"><i class="fas fa-phone mr-3"></i>(051)99872-6287</a></li>
-                                <li class="fonts">CNPJ: 43.132.974/0001-31</li>
+                                <li class="fonts"><a href="mailto:suporteiros@gmail.com" class="text-dark text-decoration-none"><i class="fas fa-envelope mr-3"></i>suporteiros@gmail.com</a></li>
+                                <li class="fonts"><a href="tel:+051993261772" class="text-dark text-decoration-none"><i class="fas fa-phone mr-3"></i>(051)99326-1772</a></li>
+                                <li class="fonts">CNPJ: 01.123.456/0001-01</li>
                             </ul>
                         </div> 
                     </div>
@@ -212,18 +212,18 @@
                 <h6 class="mb-0">Conecte-se conosco!</h6>
             </div>
             <div class="col-md-6 col-lg-7 text-md-right">
-                <a href="tel:+051998726287"><i class="fas fa-phone text-white mr-4 fa-lg"></i></a>
-                <a href="https://www.facebook.com/rogerio.doamaralborba"><i class="fab fa-facebook-f text-white mr-4 fa-lg"></i></a>
-                <a href="https://api.whatsapp.com/send?phone=5551998726287&text=Ol%C3%A1%20Rog%C3%A9rio.%20Quero%20contratar%20voc%C3%AA%20como%20Personal%20Trainer.%20"><i class="fab fa-whatsapp text-white mr-4 fa-lg"></i></a>
-                <a href="mailto:rogerioamaralborba@gmail.com"><i class="far fa-envelope text-white fa-lg"></i></a>
+                <a href="tel:+051993261772"><i class="fas fa-phone text-white mr-4 fa-lg"></i></a>
+                <a href="https://www.facebook.com/usuario.padrão"><i class="fab fa-facebook-f text-white mr-4 fa-lg"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5551993261772&text=Ol%C3%A1%20Fernando.%20Quero%20contratar%20voc%C3%AA%20como%20Personal%20Trainer.%20"><i class="fab fa-whatsapp text-white mr-4 fa-lg"></i></a>
+                <a href="mailto:suporteiros@gmail.com"><i class="far fa-envelope text-white fa-lg"></i></a>
             </div>
         </div>
         <div class="row text-justify pt-4 bg-secondary">
                 <div class="col-lg-10 mx-auto mb-4">
-                    <h6 class="text-uppercase font-weight-bold">Rogério do Amaral Borba</h6>
+                    <h6 class="text-uppercase font-weight-bold">Nome omitido Portfolio</h6>
                     <hr class="deep-purple accent-2 mb-2 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <ul class="list-unstyled"> 
-                        <li class="fonts ">Possui Graduação em Educação Física pela FACULDADE CENECISTA DE OSÓRIO-(FACOS), Especialista em Atendimento Educacional Especializado-AEE (UERGS), Especialista em Libras (FACULDADE FUTURA). Docência do Ensino Superior. (FACULDADE FUTURA). Atualmente é Professor Regente de Educação Física na Escola Municipal de Ensino Fundamental Bento Gonçalves no Município de Palmares do Sul. Também atua como Professor Municipal da rede pública de educação de Cidreira.</li>
+                        <li class="fonts ">Possui Graduação em Educação Física pela Faculdade Não Identificada - (FANI), Especialista em Atendimento Educacional Especializado-AEE (FANI), Especialista em Libras (FANI). Docência do Ensino Superior. (FANI). Atualmente é Professor Regente de Educação Física na Escola Municipal de Ensino Fundamental Qualquer uma no Município de Omitido para Portfólio.</li>
                     </ul>
                 </div>
         </div>
@@ -231,7 +231,7 @@
       <div class="row text-center py-3 bg-dark">
           <div class="col-12 text-white">
             2021:
-        <a href="https://mdbootstrap.com/"> Fernando Torres</a>
+        <a href="mailto:suporteiros@gmail.com"> Fernando Torres</a>
           </div>
       </div>
     </footer>
